--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,1 @@
-Pods/
+Pods/Headers Pods/Local Podspecs Pods/Manifest.lock Pods/Pods.xcodeproj Pods/RxCocoa Pods/RxRelay Pods/RxSwift Pods/Target Support Files
