--- a/.swiftlint.yml
+++ b/.swiftlint.yml
@@ -1,5 +1,7 @@
 disabled_rules:
 - trailing_whitespace
+- identifier_name
+- unused_optional_binding
 opt_in_rules:
 - empty_count
 - empty_string
@@ -8,8 +10,8 @@ excluded:
 - Pods
 - SwiftLint/Common/3rdPartyLib
 line_length:
-    warning: 150
-    error: 200
+    warning: 400
+    error: 300
     ignores_function_declarations: true
     ignores_comments: true
     ignores_urls: true
